[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/FPSController.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/camera_viewport.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/camera_shutter.mp3" type="AudioStream" id=3]
[ext_resource path="res://player/Interact.gd" type="Script" id=4]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[sub_resource type="CapsuleShape" id=2]
radius = 0.5

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.631915, -0.0987365 )

[node name="Hand" type="Spatial" parent="Head"]
script = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Head/Hand"]
stream = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Lense" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="Lense"]
size = Vector2( 1024, 600 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="CameraViewport" type="Sprite" parent="Lense/Viewport"]
scale = Vector2( 0.534375, 0.556481 )
texture = ExtResource( 2 )
centered = false

[connection signal="can_not_take_picture" from="." to="Head/Hand" method="_on_Player_can_not_take_picture"]
[connection signal="can_take_picture" from="." to="Head/Hand" method="_on_Player_can_take_picture"]
